Fix title alignment

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -22,6 +22,9 @@
 }
 
 @mixin title-fs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0 0 15px 0;
 }
 
